# routes4life-api

./: .env  .env_dev  .env_prod  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile_test  Makefile  README.md  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml  docs-api.md  pyproject.toml  txt.txt
.github/workflows/: linter.yml
config/: conftest.py
config/config/: settings.py  urls.py
config/routes4life_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
config/tests/: factories.py  test_auth_endpoints.py  test_serializers.py  test_user_settings.py
