[tool.poetry]
name = "routes4life-api"
version = "0.1.0"
description = ""
authors = ["Alexey Lavrenovich <lavrenovichae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
pytest = "^7.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
